--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,12 +1,15 @@
 navbar_entries:
+  - title: home
+    url: home
+    
   - title: about
     url: about
 
   - title: blog
     url: blog
 
-  # - title: website
-  #   url: https://www.abhinav.co
+  - title: website
+    url: https://www.abhinav.co
 
 project_entries:
   - title: Folk Alchemy
@@ -37,23 +40,23 @@ project_entries:
     desc: It also has a scalable vertical list (in case you need it)
 
 
-# old_project_entries:
-#   - title: Soopr
-#     url: https://www.soopr.co
-#     desc: Delight your readers - add beautiful share and like buttons easily to your websites 
-#     highlight: NEW
+old_project_entries:
+  - title: Soopr
+    url: https://www.soopr.co
+    desc: Delight your readers - add beautiful share and like buttons easily to your websites 
+    highlight: NEW
 
-#   - title: Cookie
-#     url: https://github.com/abhinavs/cookie
-#     desc: An open source landing website with supporting pages and integrated blog
+  - title: Cookie
+    url: https://github.com/abhinavs/cookie
+    desc: An open source landing website with supporting pages and integrated blog
 
-#   - title: Moonwalk
-#     url: https://github.com/abhinavs/moonwalk
-#     desc: A fast and minimalist Jekyll blog theme with clean dark mode
+  - title: Moonwalk
+    url: https://github.com/abhinavs/moonwalk
+    desc: A fast and minimalist Jekyll blog theme with clean dark mode
 
-#   - title: Humangous
-#     url: https://www.humangous.co
-#     desc: The better people know you, the better they collaborate
+  - title: Humangous
+    url: https://www.humangous.co
+    desc: The better people know you, the better they collaborate
 
 footer_entries:
   - title: abhinav's homepage
