--- a/_data/home.yml
+++ b/_data/home.yml
@@ -8,8 +8,8 @@ navbar_entries:
   - title: blog
     url: blog
 
-  - title: website
-    url: https://www.abhinav.co
+  # - title: website
+  #   url: https://www.abhinav.co
 
 project_entries:
   - title: Folk Alchemy
@@ -41,35 +41,38 @@ project_entries:
 
 
 old_project_entries:
-  - title: Soopr
-    url: https://www.soopr.co
-    desc: Delight your readers - add beautiful share and like buttons easily to your websites 
-    highlight: NEW
+  # - title: Soopr
+  #   url: https://www.soopr.co
+  #   desc: Delight your readers - add beautiful share and like buttons easily to your websites 
+  #   highlight: NEW
 
-  - title: Cookie
-    url: https://github.com/abhinavs/cookie
-    desc: An open source landing website with supporting pages and integrated blog
+  # - title: Cookie
+  #   url: https://github.com/abhinavs/cookie
+  #   desc: An open source landing website with supporting pages and integrated blog
 
-  - title: Moonwalk
-    url: https://github.com/abhinavs/moonwalk
-    desc: A fast and minimalist Jekyll blog theme with clean dark mode
+  # - title: Moonwalk
+  #   url: https://github.com/abhinavs/moonwalk
+  #   desc: A fast and minimalist Jekyll blog theme with clean dark mode
 
-  - title: Humangous
-    url: https://www.humangous.co
-    desc: The better people know you, the better they collaborate
+  # - title: Humangous
+  #   url: https://www.humangous.co
+  #   desc: The better people know you, the better they collaborate
 
 footer_entries:
-  - title: abhinav's homepage
-    url: https://www.abhinav.co
+  - title: Repository Github
+    url: https://github.com/RandomRa1n/RandomRa1n.github.io
+    
+  # - title: abhinav's homepage
+  #   url: https://www.abhinav.co
 
-  - title: twitter
-    url: https://twitter.com/abhinav
+  # - title: twitter
+  #   url: https://twitter.com/abhinav
 
-  - title: github
-    url: https://github.com/RandomRa1n
+  # - title: github
+  #   url: https://github.com/RandomRa1n
 
-  - title: feed
-    url: feed.xml
+  # - title: feed
+  #   url: feed.xml
 
 misc_entries:
   - title: this is an example vertical list
