--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: Moonwalk
-author: Abhinav Saxena
-url: https://www.abhinavsaxena.com/moonwalk # root address of the site
+title: RandomRa1n
+author: RandomRa1n
+# url: https://www.abhinavsaxena.com/moonwalk # root address of the site
 description: > # description of the site (multiple lines allowed)
-  Moonwalk is a fast and elegant Jekyll theme with a clean dark mode. It comes with horizontal list (for navbar and footer), card list (for portfolio), and a generic vertical list. It is very easy to modify in case you want to build over it - please see _layouts/home.html to do that.
+  摸鱼站点，放点小项目。
 
 permalink: /:slug
 
-# favicon: "./logo.png" # relative path to site's favicon
+favicon: "images/logo.png" # relative path to site's favicon
 
 # twitter:
 #     username: abhinav # update or delete this
@@ -18,7 +18,7 @@ remote_theme: abhinavs/moonwalk
 theme_config:
   appearance: "dark" # can be "light", "dark" or "auto"
   appearance_toggle: true # if appearance can be switched by user
-  back_home_text: "home.." # customize text for homepage link in post layout
+  back_home_text: "Back to home.." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
   show_description: true # show blog description
   show_navbar: true # show horizontal navbar
@@ -35,7 +35,7 @@ theme_config:
   # options for "home" page
   home:
     title_projects: Projects
-    title_misc_list: Details
+    # title_misc_list: Details
     title_blog: Blog
     title_old_projects: Archive
 
