--- a/_data/home.yml
+++ b/_data/home.yml
@@ -18,7 +18,7 @@ project_entries:
     highlight: Mac
 
   - title: Project 2
-    url: overview-post
+    url: code
     desc: Projects are shown in card layout
 
   - title: Project 3
