--- a/_data/home.yml
+++ b/_data/home.yml
@@ -22,7 +22,7 @@ project_entries:
     desc: Projects are shown in card layout
 
   - title: Project 3
-    url: sooper
+    url: soopr
     desc: You can control visibility from _config.yml file
 
   - title: Project 4
